--- a/Setting/config.ini
+++ b/Setting/config.ini
@@ -1,6 +1,7 @@
 [Config]
 database = mongodb+srv://thirawat:1234@cluster0.1h6mdye.mongodb.net/?retryWrites=true&w=majority
-all_timecount = 180
+all_timecount = 120
 every_record = 60
 path_mask = SourceData/mask_selection.png
+limit = 250,180,640,180
 
